Colour tags have border

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -247,6 +247,9 @@ ul
 			.menu-button
 				border-bottom-width: 0px
 
+				&.has-border
+					border-right-width: 6px
+
 			&:first-child
 				.menu-button, .menu-label
 					border-radius: 0px $radius-large 0px 0px
