Add connection error notice

--- a/pug/home.pug
+++ b/pug/home.pug
@@ -8,8 +8,9 @@ html
 		script(type="module" src="/static/js/index.js")
 
 	body
+		section.websocket-failed.top-alert#websocket-failed
 		noscript
-			section.no-script
+			section.no-script.top-alert
 				| Enable JavaScript.
 			style.
 				.yes-script {
