--- a/sass/main.sass
+++ b/sass/main.sass
@@ -329,7 +329,10 @@ ul
 	line-height: 1
 	padding: 20px
 
-.no-script
+.websocket-failed
+	display: none
+
+.top-alert
 	padding: 25px
 	font-size: 30px
 	font-weight: bold
