--- a/pug/home.pug
+++ b/pug/home.pug
@@ -44,6 +44,10 @@ html
 					button.list-management-button#clear-list Clear list
 				hr
 				section
+					.item-list-key
+						span.name Item name
+						span.aisle Aisle
+						span.quantity Quantity
 					ul.item-list#item-list
 		div.context-menu-overlay.hidden#context-menu-overlay
 		div.context-menu-layer#context-menu-layer
