--- a/sass/main.sass
+++ b/sass/main.sass
@@ -189,23 +189,28 @@ ul
 
 			.tag-inner
 				position: absolute
-				top: -8px
+				top: -6px
 				left: -8px
-				bottom: -8px
-				right: 6px
+				bottom: -6px
+				right: 7px
 				border-radius: $radius-small - 2 0px 0px $radius-small - 2
 
-		.name
-			flex: 1
+.item-list, .item-list-key
+	.name
+		flex: 1
 
-		.quantity
-			font-style: italic
-			color: #008
+	.quantity
+		font-style: italic
+		color: #008
 
-		.aisle
-			margin-right: 8px
-			font-style: italic
-			color: #060
+	.aisle
+		margin-right: 8px
+		font-style: italic
+		color: #060
+
+.item-list-key
+	display: flex
+	padding: 0px 8px 8px
 
 .context-menu-overlay
 	position: fixed
