--- a/pug/home.pug
+++ b/pug/home.pug
@@ -2,13 +2,19 @@ doctype html
 html
 	head
 		meta(charset="utf-8")
-		title Shopping List
+		title
+			if isDevelopment
+				| [ DEVELOPMENT ] - Shopping List
+			else
+				| Shopping List
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		link(rel="stylesheet" type="text/css" href="/static/css/main.css")
 		script(type="module" src="/static/js/index.js")
 
 	body
 		section.websocket-failed.top-alert#websocket-failed
+		if isDevelopment
+			section.top-alert This is the development site.
 		noscript
 			section.no-script.top-alert
 				| Enable JavaScript.
@@ -33,7 +39,11 @@ html
 					div.create-item-container
 						input(placeholder="Aisle #" autocomplete="off").item-setting-input#create-item-aisle
 						input(placeholder="Price" autocomplete="off").item-setting-input#create-item-price
-						button(disabled autocomplete="off").create-item#create-item Create this item
+						.create-item-buttons
+							button(disabled autocomplete="off").create-item#create-item Create this item
+							button(disabled autocomplete="off").look-online-button#look-online-button Look online
+				ul.keyword-list#keyword-list
+				ul.item-list.online-item-list#online-list
 				div.section-bottom-padding
 
 			div.main-section
