Don't put previews off screen

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -410,7 +410,7 @@ button, a
 	margin: 8px
 	overflow-x: auto
 	scrollbar-width: thin
-	padding-bottom: 3px
+	padding: 3px 0px
 
 	.keyword-button
 		margin-right: 4px
