Update naming guide

--- a/pug/home.pug
+++ b/pug/home.pug
@@ -61,9 +61,9 @@ html
 				details
 					summary Naming guide
 					ul
-						li Sentence case, not title case
-						li Put the main name at the start
-						li Brands and quantities in brackets at the end
+						li Put the main name at the start, like #[strong.example Chocolate (dark)] rather than #[strong.example Dark chocolate]
+						li Use sentence case, don't use title case (#[a(href="https://blog.prototypr.io/sentence-case-or-title-case-5bd581f05d88") explanation])
+						li Brands and quantities in brackets at the end, like #[strong.example Milk (Pam's, 3L)]
 				.create-item-area
 					div.create-item-container
 						input(placeholder="Aisle #" autocomplete="off").item-setting-input#create-item-aisle
