--- a/sass/main.sass
+++ b/sass/main.sass
@@ -14,440 +14,469 @@ $layout-a-min-width: 700px
 $layout-b-max-width: 699px
 
 @font-face
-	font-family: "Bariol"
-	font-display: swap
-	src: url(/static/fonts/bariol.woff2) format("woff2"), url(/static/fonts/bariol.ttf) format("truetype")
+  font-family: "Bariol"
+  font-display: swap
+  src: url(/static/fonts/bariol.woff2) format("woff2"), url(/static/fonts/bariol.ttf) format("truetype")
 
 body
-	font-family: Bariol, sans-serif
-	font-size: 20px
-	background-color: $bg-main
-	color: $fg-main
-	min-height: 100vh
-	margin: 0
-	padding: 0
-	-webkit-touch-callout: none !important
+  font-family: Bariol, sans-serif
+  font-size: 20px
+  background-color: $bg-main
+  color: $fg-main
+  min-height: 100vh
+  margin: 0
+  padding: 0
+  -webkit-touch-callout: none !important
 
-	@media only screen and (min-width: $layout-a-min-width)
-		display: grid
+  @media only screen and (min-width: $layout-a-min-width)
+    display: grid
 
-	@media only screen and (max-width: $layout-b-max-width)
-		overflow-y: scroll
+  @media only screen and (max-width: $layout-b-max-width)
+    overflow-y: scroll
 
 input, button, .link-button
-	font-family: inherit
-	font-size: inherit
-	border: 1px solid $fg-soft-edge
-	border-radius: $radius-small
-	background-color: $bg-bright
-	padding: 6px 8px
+  font-family: inherit
+  font-size: inherit
+  border: 1px solid $fg-soft-edge
+  border-radius: $radius-small
+  background-color: $bg-bright
+  padding: 6px 8px
 
-	&::placeholder
-		font-style: italic
+  &::placeholder
+    font-style: italic
 
 hr
-	border: none
-	border-bottom: 1px solid #b4b4b4
-	padding: 0
-	margin: 18px 20px
+  border: none
+  border-bottom: 1px solid #b4b4b4
+  padding: 0
+  margin: 18px 20px
 
 button, .link-button
-	&:disabled
-		background-color: $bg-disabled
+  &:disabled
+    background-color: $bg-disabled
 
-	&:not(:disabled)
-		cursor: pointer
+  &:not(:disabled)
+    cursor: pointer
 
-		&.complete
-			border-color: #999
-			background-color: #8b7
+    &.complete
+      border-color: #999
+      background-color: #8b7
 
-		&:hover
-			border-color: #aaa
-			background: linear-gradient(to bottom, #fff 20%, #eee)
-			box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2)
+    &.has-quantity
+      background-color: #c0d7ee
+      border-color: #aaa
 
-			&.complete
-				border-color: #777
-				background: linear-gradient(to bottom, #8b7, #7a6)
+    &:hover
+      border-color: #aaa
+      background: linear-gradient(to bottom, #fff 20%, #eee)
+      box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.2)
 
-		&:active
-			border-color: #888
-			background: linear-gradient(to bottom, #eee, #fff)
-			box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2) inset
+      &.complete
+        border-color: #777
+        background: linear-gradient(to bottom, #8b7, #7a6)
 
-			&.complete
-				background: linear-gradient(to top, #8b7, #7a6)
-				box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.25) inset
+      &.has-quantity
+        border-color: #777
+        background: linear-gradient(to bottom, #c0d7ee, #b0c7de)
 
-		&:focus::-moz-focus-inner
-			padding: 2px
-			border-color: rgba(0, 0, 0, 0.3)
-			border-style: dashed
+    &:active
+      border-color: #888
+      background: linear-gradient(to bottom, #eee, #fff)
+      box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.2) inset
+
+      &.complete
+        background: linear-gradient(to top, #8b7, #7a6)
+        box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.25) inset
+
+      &.has-quantity
+        background: linear-gradient(to bottom, #c0d7ee, #b0c7de)
+        box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.25) inset
+
+    &:focus::-moz-focus-inner
+      padding: 2px
+      border-color: rgba(0, 0, 0, 0.3)
+      border-style: dashed
 
 ul
-	margin: 0
-	padding: 0 0 0 2em
+  margin: 0
+  padding: 0 0 0 2em
 
 .columns
-	box-sizing: border-box
-	display: grid
-	// grid-template-columns: 2fr 1fr
-	grid-gap: $gap-size
-	padding: $gap-size
+  box-sizing: border-box
+  display: grid
+  // grid-template-columns: 2fr 1fr
+  grid-gap: $gap-size
+  padding: $gap-size
 
-	@media only screen and (min-width: $layout-a-min-width)
-		grid-template-columns: 1fr 1fr
-		height: 100vh
+  @media only screen and (min-width: $layout-a-min-width)
+    grid-template-columns: 1fr 1fr
+    height: 100vh
 
-	@media only screen and (max-width: $layout-b-max-width)
-		.item-selection-container
-			order: 2
+  @media only screen and (max-width: $layout-b-max-width)
+    .item-selection-container
+      order: 2
 
 .link-button
-	color: inherit
-	text-decoration: none
+  color: inherit
+  text-decoration: none
 
 =button-list
-	padding: 0
-	list-style-type: none
-	display: grid
-	grid-gap: $gap-size-tiny
+  padding: 0
+  list-style-type: none
+  display: grid
+  grid-gap: $gap-size-tiny
 
-	li
-		display: flex
+  li
+    display: flex
 
-		button, .link-button
-			text-align: left
-			flex: 1
+    button, .link-button
+      text-align: left
+      flex: 1
 
 .main-section
-	padding: $gap-size-medium
-	border: 1px solid $fg-soft-edge
-	border-radius: $radius-large
-	background-color: $bg-main
-	box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.6)
-	overflow-y: scroll
+  border: 1px solid $fg-soft-edge
+  border-radius: $radius-large
+  background-color: $bg-main
+  box-shadow: 0px 4px 12px -2px rgba(0, 0, 0, 0.6)
+  overflow-y: scroll
 
-	.section-bottom-padding
-		height: $gap-size-medium
+  .section-bottom-padding
+    height: $gap-size-medium
 
 .item-selection-container
-	padding: 0px
+  padding: 0px
 
-	.sticky-search
-		padding: 8px 8px 0px
-		background-color: $bg-main
-		position: sticky
-		top: 0
+  .sticky-search
+    padding: 8px 8px 0px
+    background-color: $bg-main
+    position: sticky
+    top: 0
 
-	.search-container
-		display: flex
+  .search-container
+    display: flex
 
-		.search-box
-			flex: 1
+    .search-box
+      flex: 1
 
-	.item-selection
-		+button-list
-		margin: 5px 10px 10px
+  .item-selection
+    +button-list
+    margin: 5px 10px 10px
 
-		&.outlined
-			padding: 3px
-			margin: 0px 5px 5px
-			border: 2px solid
-			border-radius: $radius-large
+    &.outlined
+      padding: 3px
+      margin: 0px 5px 5px
+      border: 2px solid
+      border-radius: $radius-large
 
-		.item-line
-			display: flex
+    .item-line
+      display: flex
 
-			.name
-				flex: 1
+      .name
+        flex: 1
 
-			.price
-				font-style: italic
-				color: maroon
+      .price
+        font-style: italic
+        color: maroon
+        margin-left: 8px
 
-	.create-item-area
-		padding: 0px 8px
+      .quantity
+        color: #008
+        display: none
 
-		.create-item-container
-			display: grid
-			grid-template-columns: auto auto 1fr
-			grid-gap: $gap-size-tiny
+    .item-line.has-quantity
+      .quantity
+        display: block
 
-			.item-setting-input
-				width: 85px
+  .create-item-area
+    padding: 0px 8px
 
-			.create-item-buttons
-				display: grid
-				grid-template-columns: 1fr 1fr
-				grid-gap: $gap-size-tiny
+    .create-item-container
+      display: grid
+      grid-template-columns: auto auto 1fr
+      grid-gap: $gap-size-tiny
 
-			.create-item, .look-online-button
-				text-align: start
+      .item-setting-input
+        width: 85px
+
+      .create-item-buttons
+        display: grid
+        grid-template-columns: 1fr 1fr
+        grid-gap: $gap-size-tiny
+
+      .create-item, .look-online-button
+        text-align: start
+
+.required-items
+  &__notice
+    border: 4px solid #f0a309
+
+.right-item-list-container
+  margin: $gap-size-medium
 
 .item-list
-	+button-list
+  +button-list
 
-	.item-list-button
-		display: flex
+  .item-list-button
+    display: flex
 
-		.tag
-			width: 8px
-			position: relative
+    .tag
+      width: 8px
+      position: relative
 
-			&.hidden
-				display: none
+      &.hidden
+        display: none
 
-			.tag-inner
-				position: absolute
-				top: -6px
-				left: -8px
-				bottom: -6px
-				right: 7px
-				border-radius: $radius-small - 2 0px 0px $radius-small - 2
+      .tag-inner
+        position: absolute
+        top: -6px
+        left: -8px
+        bottom: -6px
+        right: 7px
+        border-radius: $radius-small - 2 0px 0px $radius-small - 2
 
 .item-list, .item-list-key
-	.name
-		flex: 1
+  .name
+    flex: 1
 
-	.quantity
-		font-style: italic
-		color: #008
+  .quantity
+    font-style: italic
+    color: #008
 
-	.aisle
-		margin-right: 8px
-		font-style: italic
-		color: #060
+  .aisle
+    margin-right: 8px
+    // font-style: italic
+    color: #060
 
-	.price
-		color: maroon
+  .price
+    color: maroon
 
-		.mode
-			font-size: 0.8em
-			font-style: italic
+    .mode
+      font-size: 0.8em
+      font-style: italic
 
-	.capacity
-		margin-right: 8px
-		color: #a539d7
+  .capacity
+    margin-right: 8px
+    color: #a539d7
 
 .item-list-key
-	display: flex
-	padding: 0px 8px 8px
+  display: flex
+  padding: 0px 8px 8px
 
 .online-item-list
-	margin: 8px
-	padding: 4px
-	border-radius: $radius-large
+  margin: 8px
+  padding: 4px
+  border-radius: $radius-large
 
-	&.has-items
-		border: 2px solid #333
+  &.has-items
+    border: 2px solid #333
 
-	.item-list-button
-		overflow: hidden
-		text-overflow: ellipsis
-		height: 1.35em
+  .item-list-button
+    overflow: hidden
+    text-overflow: ellipsis
+    height: 1.35em
 
-	.preview
-		position: absolute
-		top: 0
-		left: 0
-		pointer-events: none
-		border: 4px solid #111
-		border-radius: $radius-large
-		background: white
+  .preview
+    position: absolute
+    top: 0
+    left: 0
+    pointer-events: none
+    border: 4px solid #111
+    border-radius: $radius-large
+    background: white
 
-		img
-			width: auto
-			height: auto
-			max-width: 200px
-			max-height: 200px
+    img
+      width: auto
+      height: auto
+      max-width: 200px
+      max-height: 200px
 
 .context-menu-overlay
-	position: fixed
-	top: 0
-	left: 0
-	bottom: 0
-	right: 0
+  position: fixed
+  top: 0
+  left: 0
+  bottom: 0
+  right: 0
 
-	&.hidden
-		display: none
+  &.hidden
+    display: none
 
 =unclickable-tile
-	background-color: $bg-bright
-	padding: 8px
-	border: 1px solid $fg-soft-edge
-	border-radius: $radius-small
+  background-color: $bg-bright
+  padding: 8px
+  border: 1px solid $fg-soft-edge
+  border-radius: $radius-small
 
 .context-menu
-	position: fixed
-	width: 215px
-	border-radius: 0px $radius-large $radius-large $radius-large
-	box-shadow: 0px 4px 12px 6px rgba(0, 0, 0, 0.6)
+  position: fixed
+  width: 215px
+  border-radius: 0px $radius-large $radius-large $radius-large
+  box-shadow: 0px 4px 12px 6px rgba(0, 0, 0, 0.6)
 
-	.menu-list
-		display: flex
-		flex-direction: column
-		padding: 0
+  .menu-list
+    display: flex
+    flex-direction: column
+    padding: 0
 
-		.menu-item
-			display: flex
+    .menu-item
+      display: flex
 
-			.menu-label
-				+unclickable-tile
-				background-color: $bg-main
-				border: 1px solid #346ebb
-				border-left-width: 10px
-				line-height: 1.3
+      .menu-label
+        +unclickable-tile
+        background-color: $bg-main
+        border: 1px solid #346ebb
+        border-left-width: 10px
+        line-height: 1.3
 
-			.menu-button, .menu-label
-				flex: 1
-				border-radius: 0px
-				text-align: left
-				white-space: pre-line
+      .menu-button, .menu-label
+        flex: 1
+        border-radius: 0px
+        text-align: left
+        white-space: pre-line
 
-			.menu-button
-				border-bottom-width: 0px
+      .menu-button
+        border-bottom-width: 0px
 
-				&.has-border
-					border-right-width: 6px
+        &.has-border
+          border-right-width: 6px
 
-			&:first-child
-				.menu-button, .menu-label
-					border-radius: 0px $radius-large 0px 0px
+      &:first-child
+        .menu-button, .menu-label
+          border-radius: 0px $radius-large 0px 0px
 
-			&:last-child
-				.menu-button, .menu-label
-					border-radius: 0px 0px $radius-large $radius-large
-					border-bottom-width: 1px
+      &:last-child
+        .menu-button, .menu-label
+          border-radius: 0px 0px $radius-large $radius-large
+          border-bottom-width: 1px
 
 .default-tag-flex
-	display: flex
-	align-items: center
+  display: flex
+  align-items: center
 
-	hr
-		flex: 1
+  hr
+    flex: 1
 
-	.tag
-		$margin: 4px
-		$width: 18px
+  .tag
+    $margin: 4px
+    $width: 18px
 
-		cursor: pointer
-		width: $width
-		height: $width
-		border-radius: 50%
-		display: flex
-		justify-content: center
-		background-color: white
-		align-items: center
-		margin: $margin
+    cursor: pointer
+    width: $width
+    height: $width
+    border-radius: 50%
+    display: flex
+    justify-content: center
+    background-color: white
+    align-items: center
+    margin: $margin
 
-		.tag-inner
-			width: $width
-			height: $width
-			border-radius: 50%
+    .tag-inner
+      width: $width
+      height: $width
+      border-radius: 50%
 
-		&.selected
-			width: $width - 2px
-			height: $width - 2px
-			border: 1px solid black
+    &.selected
+      width: $width - 2px
+      height: $width - 2px
+      border: 1px solid black
 
-			.tag-inner
-				width: $width - 4px
-				height: $width - 4px
+      .tag-inner
+        width: $width - 4px
+        height: $width - 4px
 
 .summary
-	+unclickable-tile
-	line-height: 1.3
-	position: relative
-	white-space: pre-line
-	margin-bottom: $gap-size-medium
+  +unclickable-tile
+  line-height: 1.3
+  position: relative
+  white-space: pre-line
+  margin-bottom: $gap-size-medium
+  margin: $gap-size-medium
 
-	.prices
-		line-height: 1.17
+  .prices
+    line-height: 1.17
 
-	.border
-		color: #000
+  .border
+    color: #000
 
 .progress
-	position: absolute
-	bottom: 0
-	left: 0
-	right: 0
-	border-top: 1px solid $fg-soft-edge
-	height: 5px
-	border-radius: 0px 0px $radius-small $radius-small
+  position: absolute
+  bottom: 0
+  left: 0
+  right: 0
+  border-top: 1px solid $fg-soft-edge
+  height: 5px
+  border-radius: 0px 0px $radius-small $radius-small
 
 .list-management
-	display: flex
+  display: flex
+  margin: $gap-size-medium
 
-	.list-management-button
-		flex: 1
+  .list-management-button
+    flex: 1
 
 .yes-script
-	text-align: center
-	font-size: 30px
-	font-weight: bold
-	line-height: 1
-	padding: 20px
+  text-align: center
+  font-size: 30px
+  font-weight: bold
+  line-height: 1
+  padding: 20px
 
 .websocket-failed
-	display: none
+  display: none
 
 .top-alert
-	padding: 25px
-	font-size: 30px
-	font-weight: bold
-	text-align: center
-	background-color: maroon
-	border-bottom: 4px solid black
-	color: white
+  padding: 25px
+  font-size: 30px
+  font-weight: bold
+  text-align: center
+  background-color: maroon
+  border-bottom: 4px solid black
+  color: white
 
 button, a
-	-webkit-user-select: none !important
+  -webkit-user-select: none !important
 
 .keyword-list
-	display: flex
-	list-style-type: none
-	margin: 8px
-	overflow-x: auto
-	scrollbar-width: thin
-	padding: 3px 0px
+  display: flex
+  list-style-type: none
+  margin: 8px
+  overflow-x: auto
+  scrollbar-width: thin
+  padding: 3px 0px
 
-	.keyword-button
-		margin-right: 4px
-		line-height: 1
-		padding: 6px 10px
-		border-radius: 50vh
-		font-size: 17px
+  .keyword-button
+    margin-right: 4px
+    line-height: 1
+    padding: 6px 10px
+    border-radius: 50vh
+    font-size: 17px
 
 details
-	margin: 8px
-	padding: 8px
-	background-color: white
-	border: 1px solid #ccc
-	border-radius: $radius-small
-	font-size: 17px
+  margin: 8px
+  padding: 8px
+  background-color: white
+  border: 1px solid #ccc
+  border-radius: $radius-small
+  font-size: 17px
 
-	summary
-		cursor: pointer
-		line-height: 1
+  summary
+    cursor: pointer
+    line-height: 1
 
-	&[open] summary
-		margin-bottom: 8px
+  &[open] summary
+    margin-bottom: 8px
 
 dl
-	margin: 0
-	display: grid
-	grid-template-columns: 25px 1fr
+  margin: 0
+  display: grid
+  grid-template-columns: 25px 1fr
 
-	dd, dt
-		margin: 0
+  dd, dt
+    margin: 0
 
-	dt
-		text-align: center
+  dt
+    text-align: center
 
 .example
-	padding: 2px 5px
-	background-color: #d4d2d0
-	border-radius: 4px
+  padding: 2px 5px
+  background-color: #d4d2d0
+  border-radius: 4px
